--- a/index.html
+++ b/index.html
@@ -15,22 +15,23 @@
 
 <div id="header">
     <div class= "container">
-        <nav>
-            <ul class = "nav-links">
-                <li><a href="#header"> Home </a></li>
-                <li><a href="#about"> About Me</a></li>
-                <li><a href="#projects"> Projects</a> </li>
-                <li><a href="#"> Contact Me</a> </li>
-                
-
-            </ul>
-        </nav>
         <div class="header-text">
-            <p>Computer Science / Cybersecurity Student </p>
+
             <h1> Hello, My name is <b>Dillon Tall </b> </h1>
+            <h2> CS/Cybersecurity Student Focused on Building Safer & Accessible Systems</h2>
+            <h2><a href="images/DTallResume.pdf" download class="btn btn3">Download Resume</a></h2>
         </div>
     </div>
 </div>
+
+<nav id="sticky-nav">
+ <ul class = "nav-links">
+         <li><a href="#header"> Home </a></li>
+         <li><a href="#about"> About Me</a></li>
+         <li><a href="#projects"> Projects</a> </li>
+         <li><a href="#contact"> Contact Me</a> </li>
+        </ul>
+</nav>
 
 <!--About section including  Skills, Experience and Education-->
 <div id = "about">
@@ -45,13 +46,13 @@
                 Experienced in collaborating with faculty on project development and deployment.
                  Passionate about problem-solving and eager to gain hands-on experience.</p>
 
-                 <div class="tab-titles">
-                    <p class ="tab-links active-link" onclick="opentab('experience')">Experience</p>
-                    <p class ="tab-links active-link" onclick="opentab('education')">Education</p>
-                    <p class ="tab-links active-link" onclick="opentab('skills')">Skills</p>
-                    <p class ="tab-links active-link" onclick="opentab('certs')">Certifications and Awards</p>
+            <div class="tab-titles">
+            <p class="tab-links active-link" onclick="opentab('experience')">Experience</p>
+            <p class="tab-links" onclick="opentab('education')">Education</p>
+            <p class="tab-links" onclick="opentab('skills')">Skills</p>
+            <p class="tab-links" onclick="opentab('certs')">Certifications</p>
+            </div>
 
-                 </div>
 
                  <div class="tab-contents" id="skills">
                     <ul>
@@ -116,42 +117,44 @@
     </div>
 </div>
 <!--Projects Section-->
+<!-- Projects Section -->
 <div id="projects">
-    <div class="container">
-        <h1 class="sub-title">My Projects</h1>
-        <div class="work-list">
+  <div class="container">
+    <h1 class="sub-title">My Projects</h1>
 
-            <div class="work">
-                <img src="images/Project1.png">
-
-                <div class="layer">
-                    <h3>SCSU WLL Website Capstone Project</h3>
-                    <p>Collaborated with faculty members Miaowei Weng, Erin Larkin, and webmaster
-                         Jian Chan on a capstone project to restructure the World Languages and Literature website. 
-                         Used HTML/CSS, JavaScript, XAMPP, SQL, and other tools to enhance 
-                         accessibility, interactivity, and user experience.</p>
-
-                </div>
-            </div>
-
-            <div class="work">
-                <img src="images/Project2.png">
-
-                <div class="layer">
-                    <h3>SCSU WLL Website Capstone Project</h3>
-                    <p>Awarded first place for final group project—a fully functional, deployed study group scheduler.
-                         The platform enables student sign-in with school credentials, group forum interaction, 
-                         post creation, and messaging. Built using Flask, Python, HTML/CSS, and integrated with a 
-                         database backend, hosted using Google Cloud Platform (GCP).</p>
-
-                </div>
-            </div>
-
-
-
-        </div>
+    <!-- Project 1 -->
+    <div class="project-item">
+      <img src="images/Project1.png" alt="Project 1 image">
+      <div class="project-text">
+        <h3>SCSU WLL Website Capstone Project </h3>
+        <p>
+          Collaborated with faculty members Miaowei Weng, Erin Larkin, and webmaster
+          Jian Chan on a capstone project to restructure the World Languages and Literature website.
+          Used HTML/CSS, JavaScript, XAMPP, SQL, and other tools to enhance accessibility,
+          interactivity, and user experience.
+        </p>
+        <a href="https://github.com/jasminegraciano/WLL-Website-Redesign" class="btn-learn-more">Learn More</a>
+      </div>
     </div>
+
+    <!-- Project 2 -->
+    <div class="project-item">
+      <img src="images/Project2.png" alt="Project 2 image">
+      <div class="project-text">
+        <h3>Study Group Scheduler</h3>
+        <p>
+          Awarded first place for final group project—a fully functional, deployed study group scheduler.
+          The platform enables student sign-in with school credentials, group forum interaction,
+          post creation, and messaging. Built using Flask, Python, HTML/CSS, and integrated with
+          a database backend, hosted using Google Cloud Platform (GCP).
+        </p>
+        <a href="https://github.com/DillonT15/CSC-330-G1-GroupScheduler" class="btn-learn-more">Learn More</a>
+      </div>
+    </div>
+
+  </div>
 </div>
+
 
 
 
@@ -170,7 +173,6 @@
                     <a href="https://www.facebook.com/profile.php?id=100010438547851"><i class="fa-brands fa-facebook"></i></i></a>
 
                 </div>
-                <a href="images/DTallResume.pdf" download class="btn btn2">Download Resume</a>
             </div>
             <div class="contact-right">
                 <form name ="submit-to-google-sheet">
@@ -181,14 +183,14 @@
                 </form>
                 <span id="msg"></span>
         </div>
-        <div class="credits">
-            <p>Website made by Dillon Tall with assistance from https://fontawesome.com/, Southern Connecticut State University WLL Department https://www.southernct.edu/academics/world-languages-and-literatures and GreatStack.</p>
-        </div>
+
     </div>
 </div>
 
 
-
+        <div class="credits">
+            <p>Website made by Dillon Tall with assistance from https://fontawesome.com/, Southern Connecticut State University WLL Department https://www.southernct.edu/academics/world-languages-and-literatures and GreatStack.</p>
+        </div>
 
 
 
